syntax = "proto3";

package ai.metathings.service.core_agent;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "entity.proto";

message CreateOrGetEntityRequest {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue service_name = 2 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue endpoint = 3 [(validator.field) = {msg_exists: true}];
}

message CreateOrGetEntityResponse {
	Entity entity = 1;
}
